<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.proyects.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.proyects.ui.person.PersonsFragment"
        android:label="@string/title_persone"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.proyects.ui.favorite.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_buyed"
        android:name="com.example.proyects.ui.buyed.BuyedsFragment"
        android:label="@string/title_buyed"
        tools:layout="@layout/fragment_buyed" />
    <fragment
        android:id="@+id/navigation_catalogo"
        android:name="com.example.proyects.ui.catalogo.CatalogoFragment"
        android:label="@string/title_catalogo"
        tools:layout="@layout/fragment_catalogo" />
</navigation>