<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_height="32dp"
        android:layout_width="32dp"
        app:layout_constraintVertical_bias="0.022"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/hamburguer"
        android:scaleType="fitCenter"
        android:id="@+id/menuhamburguer"/>

    <TextView
        android:id="@+id/mastercard_"
        android:layout_width="226dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/selecciona_"
        android:textAppearance="@style/mastercard_"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="MissingConstraints" />

    <SearchView android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/searchView"
        android:layout_marginTop="52dp"/>

    <TextView
        android:id="@+id/regina_bern"
        android:layout_width="112dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/regina_bern"
        android:textAppearance="@style/regina_bern"
        app:layout_constraintBottom_toTopOf="@+id/vence_el_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/vence_el_10"
        android:layout_width="142dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/vence_el_10"
        android:textAppearance="@style/vence_el_10"
        app:layout_constraintBottom_toTopOf="@+id/line3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line1"
        android:layout_width="381dp"
        android:layout_height="3dp"
        android:background="#E3C87F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <View
        android:id="@+id/line3"
        android:layout_width="381dp"
        android:layout_height="3dp"
        android:background="#E3C87F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/mastercard1_"
        android:layout_width="226dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:gravity="top"
        android:text="@string/addcard"
        android:textAppearance="@style/mastercard_"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:text=">"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="326dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text=">"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="326dp" />

    <TextView
        android:id="@+id/mastercard2_"
        android:layout_width="334dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="top"
        android:text="@string/addpoints"
        android:textAppearance="@style/mastercard_"
        app:layout_constraintTop_toBottomOf="@+id/line4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp" />

    <View
        android:id="@+id/line4"
        android:layout_width="381dp"
        android:layout_height="3dp"
        android:background="#E3C87F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/vence_el_11"
        android:layout_width="142dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/vence_el_10"
        android:textAppearance="@style/vence_el_10"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintVertical_bias="0.857" />

    <View
        android:id="@+id/line2"
        android:layout_width="381dp"
        android:layout_height="3dp"
        android:background="#E3C87F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mastercard_"
        android:textAppearance="@style/mastercard_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.25" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ppuntos"
        android:textAppearance="@style/mastercard_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/button2"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:text="Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintVertical_bias="0.105" />

</androidx.constraintlayout.widget.ConstraintLayout>
